tests/valid/ListLength_Valid_1.wys
function main() => void:
    [int] arr = [1, 2, 3]
    print arr[0]

