tests/errors/TypeErrors_1.wys
void main():

    print [0, 1, 2] ++ 1
    print (true && 1)
    print (1 + "4")